# loopchain

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  VERSION  build.sh  generate_code.sh  loop  loopchain.py  requirements.txt  run_loopchain.sh  run_mainnet_citizen.sh  run_test.sh  run_testnet_citizen.sh  sendtx_testnet.json  setup.cfg  setup.py  stop_all.sh  stop_mainnet_citizen.sh  stop_testnet_citizen.sh
.github/workflows/: citizen.yml  github_action_test.yml  unit_test.yml
citizen/: quick_start.md  quick_start_centos.md  quick_start_snap.md  quick_start_ubuntu.md  run_citizen_mainnet.sh  run_citizen_testnet.sh  stop_all.sh
citizen/conf/: citizen_mainnet.json  citizen_testnet.json  iconrpcserver_mainnet.json  iconrpcserver_testnet.json  iconservice_mainnet.json  iconservice_testnet.json
cli_tools/icx_test/: __init__.py  address_list_test.txt  icx_test.py  icx_wallet.py
conf/: iconrpcserver_conf.json  iconservice_conf.json  loopchain_conf.json
conf/develop/: iconrpcserver_conf.json  iconservice_conf.json
conf/mainnet/: iconrpcserver_conf.json  iconservice_conf.json  loopchain_conf.json
conf/testnet/: iconrpcserver_conf.json  iconservice_conf.json  loopchain_conf.json
docs/1. specification/: block(0.3).md  block_db_schema.wsd  leader_complain.md
docs/5. run/: run_citizen_node.md
docs/8. diagram/: State Machine in Siever  state_machine_in_siever.wsd
legacy/: configure.py  launcher.py
loopchain/: __init__.py  __main__.py  configure.py  configure_default.py  launcher.py  loopchain
loopchain3/: configure.json  configure.py
snap/: snapcraft.yaml
snapcraft/: Dockerfile  README.md
(+597 files in other folders)
