[metadata]
version = attr: loopchain.__init__.__version__

[bumpversion]
current_version = 2.2.1.4
tag = True
tag_name = {new_version}
commit = True
message = Bump up {current_version} -> {new_version}
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.(?P<hotfix>\d+))?
serialize = 
	{major}.{minor}.{patch}.{hotfix}
	{major}.{minor}.{patch}

[bumpversion:file:loopchain/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

